<resources>
    <string name="app_name">Sudoku</string>
    <string name="start_new_game">New Game</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="exit">Exit</string>
    <string name="check">Check</string>
    <string name="reset">Reset</string>
    <string name="correct">Correct!</string>
    <string name="try_again">Try again.</string>
    <string name="back">Back</string>
    <string name="some_information_about_game">The objective is to fill a 9x9 grid with digits so that
        each column, each row, and each of the nine 3x3 subgrids that compose the grid (also called
        "boxes", "blocks", "regions", or "subsquares") contains all of the digits from 1 to 9. The
        puzzle setter provides a partially completed grid, which for a well-posed puzzle has a unique
        solution.

        Completed games are always a type of Latin square with an additional constraint on the contents
        of individual regions. For example, the same single integer may not appear twice in the same row,
        column, or any of the nine 3x3 subregions of the 9x9 playing board.</string>
</resources>