<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#EDF3FB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:fontFamily="@font/boomboom"
        android:textSize="75sp"
        android:textColor="#507DC1"/>

    <Button
        android:id="@+id/btnStartNewGame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="24sp"
        android:fontFamily="@font/boomboom"
        android:textColor="@color/white"
        android:background="#507DC1"
        android:text="@string/start_new_game"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:fontFamily="@font/boomboom"
        android:textColor="@color/white"
        android:background="#507DC1"
        android:text="@string/about"/>

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:fontFamily="@font/boomboom"
        android:textColor="@color/white"
        android:background="#507DC1"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:fontFamily="@font/boomboom"
        android:textColor="@color/white"
        android:background="#507DC1"
        android:text="@string/exit"/>
</LinearLayout>
