<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#EDF3FB">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/boomboom"
        android:textSize="24sp"
        android:background="#507DC1"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/boomboom"
        android:textColor="#507DC1"/>


    <!-- Сітка поверх фону -->
    <GridLayout
        android:id="@+id/sudokuGrid"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:columnCount="9"
        android:rowCount="9"
        android:padding="2dp"
        android:background="@drawable/grid"
        android:layout_marginTop="25dp">
    </GridLayout>

    <!-- Панель кнопок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#507DC1"
            android:fontFamily="@font/boomboom"
            android:text="@string/check"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reset"
            android:fontFamily="@font/boomboom"
            android:textSize="24sp"
            android:background="#507DC1"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>


